--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="../dist/output.css" rel="stylesheet" />
+    #
+    <link href="../public/" rel="stylesheet" />
     <!-- javascript -->
     <link
       rel="stylesheet"
@@ -1045,6 +1046,7 @@
     </footer>
     <!-- end footer -->
 
-    <script src="../dist/script.js"></script>
+    #
+    <script src="../public/script.js"></script>
   </body>
 </html>
