--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    #
-    <link href="../public/" rel="stylesheet" />
+    <link href="../public/output.css" rel="stylesheet" />
     <!-- javascript -->
     <link
       rel="stylesheet"
@@ -1045,8 +1044,6 @@
       </div>
     </footer>
     <!-- end footer -->
-
-    #
     <script src="../public/script.js"></script>
   </body>
 </html>
