Update dari laptop kantor

--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
       class=""
       rel="icon"
       type="image/png"
-      href="../public/img/Hero/favicon.png"
+      href="public/img/Hero/favicon.png"
     />
   </head>
   <body class="bg-idekalina font-poppins text-idekatext">
@@ -35,7 +35,7 @@
       <div class="container">
         <div class="relative flex items-center justify-between">
           <div class="">
-            <img src="../public/img/Hero/logo.png" alt="" />
+            <img src="public/img/Hero/logo.png" alt="" />
           </div>
           <div class="flex items-center">
             <button
@@ -140,7 +140,7 @@
 
         <!-- Image -->
         <div class="">
-          <img src="../public/img/Hero/hero.png" alt="Undangan Eksklusif" />
+          <img src="public/img/Hero/hero.png" alt="Undangan Eksklusif" />
         </div>
       </div>
     </section>
@@ -161,7 +161,7 @@
           <!-- Fitur 1 -->
           <div class="mb-15 flex flex-col items-center md:mb-0 md:space-y-3">
             <img
-              src="../public/img/benefit/diamond.png"
+              src="public/img/benefit/diamond.png"
               alt="Eksklusif"
               class="mb-8 h-15 w-15"
             />
@@ -171,7 +171,7 @@
           <!-- Fitur 2 -->
           <div class="mb-15 flex flex-col items-center space-y-3 md:mb-0">
             <img
-              src="../public/img/benefit/pencil.png"
+              src="public/img/benefit/pencil.png"
               alt="Custom"
               class="mb-8 h-15 w-15"
             />
@@ -181,7 +181,7 @@
           <!-- Fitur 3 -->
           <div class="mb-15 flex flex-col items-center space-y-3 md:mb-0">
             <img
-              src="../public/img/benefit/clock.png"
+              src="public/img/benefit/clock.png"
               alt="Cepat"
               class="mb-8 h-15 w-15"
             />
@@ -191,7 +191,7 @@
           <!-- Fitur 4 -->
           <div class="mb-15 flex flex-col items-center space-y-3 md:mb-0">
             <img
-              src="../public/img/benefit/heart.png"
+              src="public/img/benefit/heart.png"
               alt="Bersahabat"
               class="mb-8 h-15 w-15"
             />
@@ -216,7 +216,7 @@
         >
           <div class="flex justify-center">
             <img
-              src="../public/img/catalog/image0.png"
+              src="public/img/catalog/image0.png"
               alt="Minimalis Modern"
               class="h-55 w-60"
             />
@@ -238,7 +238,7 @@
         >
           <div class="flex justify-center">
             <img
-              src="../public/img/catalog/image0.png"
+              src="public/img/catalog/image0.png"
               alt="Minimalis Modern"
               class="h-55 w-60"
             />
@@ -260,7 +260,7 @@
         >
           <div class="flex justify-center">
             <img
-              src="../public/img/catalog/image0.png"
+              src="public/img/catalog/image0.png"
               alt="Minimalis Modern"
               class="h-55 w-60"
             />
@@ -282,7 +282,7 @@
         >
           <div class="flex justify-center">
             <img
-              src="../public/img/catalog/image0.png"
+              src="public/img/catalog/image0.png"
               alt="Minimalis Modern"
               class="h-55 w-60"
             />
@@ -316,7 +316,7 @@
           <!-- Step 1 -->
           <div class="flex flex-col items-center">
             <img
-              src="../public/img/How to/choice0.png"
+              src="public/img/How to/choice0.png"
               alt="Pilih Desain"
               class="h15- mb-4 w-15"
             />
@@ -328,7 +328,7 @@
           <!-- Step 2 -->
           <div class="flex flex-col items-center">
             <img
-              src="../public/img/How to/phone0.png"
+              src="public/img/How to/phone0.png"
               alt="Hubungi Kami"
               class="h15- mb-4 w-15"
             />
@@ -340,7 +340,7 @@
           <!-- Step 3 -->
           <div class="flex flex-col items-center">
             <img
-              src="../public/img/How to/agreement0.png"
+              src="public/img/How to/agreement0.png"
               alt="Kirim Data"
               class="h15- mb-4 w-15"
             />
@@ -352,7 +352,7 @@
           <!-- Step 4 -->
           <div class="flex flex-col items-center">
             <img
-              src="../public/img/How to/document0.png"
+              src="public/img/How to/document0.png"
               alt="Revisi Jika Perlu"
               class="h15- mb-4 w-15"
             />
@@ -364,7 +364,7 @@
           <!-- Step 5 -->
           <div class="flex flex-col items-center">
             <img
-              src="../public/img/How to/send0.png"
+              src="public/img/How to/send0.png"
               alt="Siap Kirim"
               class="h15- mb-4 w-15"
             />
@@ -398,27 +398,27 @@
                   >
                     <img
                       class="h-7 w-7"
-                      src="../public/img/testimoni/star0.png"
+                      src="public/img/testimoni/star0.png"
                       alt=""
                     />
                     <img
                       class="h-7 w-7"
-                      src="../public/img/testimoni/star0.png"
+                      src="public/img/testimoni/star0.png"
                       alt=""
                     />
                     <img
                       class="h-7 w-7"
-                      src="../public/img/testimoni/star0.png"
+                      src="public/img/testimoni/star0.png"
                       alt=""
                     />
                     <img
                       class="h-7 w-7"
-                      src="../public/img/testimoni/star0.png"
+                      src="public/img/testimoni/star0.png"
                       alt=""
                     />
                     <img
                       class="h-7 w-7"
-                      src="../public/img/testimoni/star0.png"
+                      src="public/img/testimoni/star0.png"
                       alt=""
                     />
                   </div>
@@ -456,27 +456,27 @@
                   >
                     <img
                       class="h-7 w-7"
-                      src="../public/img/testimoni/star0.png"
+                      src="public/img/testimoni/star0.png"
                       alt=""
                     />
                     <img
                       class="h-7 w-7"
-                      src="../public/img/testimoni/star0.png"
+                      src="public/img/testimoni/star0.png"
                       alt=""
                     />
                     <img
                       class="h-7 w-7"
-                      src="../public/img/testimoni/star0.png"
+                      src="public/img/testimoni/star0.png"
                       alt=""
                     />
                     <img
                       class="h-7 w-7"
-                      src="../public/img/testimoni/star0.png"
+                      src="public/img/testimoni/star0.png"
                       alt=""
                     />
                     <img
                       class="h-7 w-7"
-                      src="../public/img/testimoni/star0.png"
+                      src="public/img/testimoni/star0.png"
                       alt=""
                     />
                   </div>
@@ -513,27 +513,27 @@
                   >
                     <img
                       class="h-7 w-7"
-                      src="../public/img/testimoni/star0.png"
+                      src="public/img/testimoni/star0.png"
                       alt=""
                     />
                     <img
                       class="h-7 w-7"
-                      src="../public/img/testimoni/star0.png"
+                      src="public/img/testimoni/star0.png"
                       alt=""
                     />
                     <img
                       class="h-7 w-7"
-                      src="../public/img/testimoni/star0.png"
+                      src="public/img/testimoni/star0.png"
                       alt=""
                     />
                     <img
                       class="h-7 w-7"
-                      src="../public/img/testimoni/star0.png"
+                      src="public/img/testimoni/star0.png"
                       alt=""
                     />
                     <img
                       class="h-7 w-7"
-                      src="../public/img/testimoni/star0.png"
+                      src="public/img/testimoni/star0.png"
                       alt=""
                     />
                   </div>
@@ -571,27 +571,27 @@
                   >
                     <img
                       class="h-7 w-7"
-                      src="../public/img/testimoni/star0.png"
+                      src="public/img/testimoni/star0.png"
                       alt=""
                     />
                     <img
                       class="h-7 w-7"
-                      src="../public/img/testimoni/star0.png"
+                      src="public/img/testimoni/star0.png"
                       alt=""
                     />
                     <img
                       class="h-7 w-7"
-                      src="../public/img/testimoni/star0.png"
+                      src="public/img/testimoni/star0.png"
                       alt=""
                     />
                     <img
                       class="h-7 w-7"
-                      src="../public/img/testimoni/star0.png"
+                      src="public/img/testimoni/star0.png"
                       alt=""
                     />
                     <img
                       class="h-7 w-7"
-                      src="../public/img/testimoni/star0.png"
+                      src="public/img/testimoni/star0.png"
                       alt=""
                     />
                   </div>
@@ -629,27 +629,27 @@
                   >
                     <img
                       class="h-7 w-7"
-                      src="../public/img/testimoni/star0.png"
+                      src="public/img/testimoni/star0.png"
                       alt=""
                     />
                     <img
                       class="h-7 w-7"
-                      src="../public/img/testimoni/star0.png"
+                      src="public/img/testimoni/star0.png"
                       alt=""
                     />
                     <img
                       class="h-7 w-7"
-                      src="../public/img/testimoni/star0.png"
+                      src="public/img/testimoni/star0.png"
                       alt=""
                     />
                     <img
                       class="h-7 w-7"
-                      src="../public/img/testimoni/star0.png"
+                      src="public/img/testimoni/star0.png"
                       alt=""
                     />
                     <img
                       class="h-7 w-7"
-                      src="../public/img/testimoni/star0.png"
+                      src="public/img/testimoni/star0.png"
                       alt=""
                     />
                   </div>
@@ -687,27 +687,27 @@
                   >
                     <img
                       class="h-7 w-7"
-                      src="../public/img/testimoni/star0.png"
+                      src="public/img/testimoni/star0.png"
                       alt=""
                     />
                     <img
                       class="h-7 w-7"
-                      src="../public/img/testimoni/star0.png"
+                      src="public/img/testimoni/star0.png"
                       alt=""
                     />
                     <img
                       class="h-7 w-7"
-                      src="../public/img/testimoni/star0.png"
+                      src="public/img/testimoni/star0.png"
                       alt=""
                     />
                     <img
                       class="h-7 w-7"
-                      src="../public/img/testimoni/star0.png"
+                      src="public/img/testimoni/star0.png"
                       alt=""
                     />
                     <img
                       class="h-7 w-7"
-                      src="../public/img/testimoni/star0.png"
+                      src="public/img/testimoni/star0.png"
                       alt=""
                     />
                   </div>
@@ -745,27 +745,27 @@
                   >
                     <img
                       class="h-7 w-7"
-                      src="../public/img/testimoni/star0.png"
+                      src="public/img/testimoni/star0.png"
                       alt=""
                     />
                     <img
                       class="h-7 w-7"
-                      src="../public/img/testimoni/star0.png"
+                      src="public/img/testimoni/star0.png"
                       alt=""
                     />
                     <img
                       class="h-7 w-7"
-                      src="../public/img/testimoni/star0.png"
+                      src="public/img/testimoni/star0.png"
                       alt=""
                     />
                     <img
                       class="h-7 w-7"
-                      src="../public/img/testimoni/star0.png"
+                      src="public/img/testimoni/star0.png"
                       alt=""
                     />
                     <img
                       class="h-7 w-7"
-                      src="../public/img/testimoni/star0.png"
+                      src="public/img/testimoni/star0.png"
                       alt=""
                     />
                   </div>
@@ -815,29 +815,26 @@
               <h3 class="mb-4 text-lg text-white">Kontak Kami</h3>
               <ul class="space-y-4 text-sm text-white">
                 <li class="flex items-center gap-2">
-                  <img
-                    src="../public/img/Kontak kami/placeholder0.png"
-                    alt=""
-                  />
+                  <img src="public/img/Kontak kami/placeholder0.png" alt="" />
                   <i class=""></i> Banyubiru, Ambarawa, <br />Kab Semarang
                 </li>
                 <li class="flex items-center gap-2">
-                  <img src="../public/img/Kontak kami/email1.png" alt="" />
+                  <img src="public/img/Kontak kami/email1.png" alt="" />
                   <i class="fas fa-envelope"></i> idekalina@gmail.com
                 </li>
                 <li class="flex items-center gap-2">
                   <img
-                    src="../public/img/Kontak kami/phone-receiver-silhouette0.png"
+                    src="public/img/Kontak kami/phone-receiver-silhouette0.png"
                     alt=""
                   />
                   <i class="fas fa-phone"></i> 081235962004
                 </li>
                 <li class="flex items-center gap-2">
-                  <img src="../public/img/Kontak kami/instagram1.png" alt="" />
+                  <img src="public/img/Kontak kami/instagram1.png" alt="" />
                   <i class="fab fa-instagram"></i> IDEKALINA
                 </li>
                 <li class="flex items-center gap-2">
-                  <img src="../public/img/Kontak kami/tik-tok0.png" alt="" />
+                  <img src="public/img/Kontak kami/tik-tok0.png" alt="" />
                   <i class="fab fa-tiktok"></i> IDEKALINA
                 </li>
               </ul>
@@ -892,7 +889,7 @@
           <div class="col-span-full mb-10 lg:col-span-2 lg:mb-0">
             <img
               class="mx-auto lg:mx-0"
-              src="../public/img/Hero/logo.png"
+              src="public/img/Hero/logo.png"
               alt=""
             />
             <p class="py-8 text-center text-sm lg:max-w-xs lg:text-left">
