--- a/public/index.html
+++ b/public/index.html
@@ -20,12 +20,7 @@
       rel="stylesheet"
     />
     <title>Idekalina</title>
-    <link
-      class=""
-      rel="icon"
-      type="image/png"
-      href="public/img/Hero/favicon.png"
-    />
+    <link class="" rel="icon" type="image/png" href="img/Hero/favicon.png" />
   </head>
   <body class="bg-idekalina font-poppins text-idekatext">
     <!-- navbar -->
@@ -35,7 +30,7 @@
       <div class="container">
         <div class="relative flex items-center justify-between">
           <div class="">
-            <img src="public/img/Hero/logo.png" alt="" />
+            <img src="img/Hero/logo.png" alt="" />
           </div>
           <div class="flex items-center">
             <button
@@ -140,7 +135,7 @@
 
         <!-- Image -->
         <div class="">
-          <img src="public/img/Hero/hero.png" alt="Undangan Eksklusif" />
+          <img src="img/Hero/hero.png" alt="Undangan Eksklusif" />
         </div>
       </div>
     </section>
@@ -161,7 +156,7 @@
           <!-- Fitur 1 -->
           <div class="mb-15 flex flex-col items-center md:mb-0 md:space-y-3">
             <img
-              src="public/img/benefit/diamond.png"
+              src="img/benefit/diamond.png"
               alt="Eksklusif"
               class="mb-8 h-15 w-15"
             />
@@ -171,7 +166,7 @@
           <!-- Fitur 2 -->
           <div class="mb-15 flex flex-col items-center space-y-3 md:mb-0">
             <img
-              src="public/img/benefit/pencil.png"
+              src="img/benefit/pencil.png"
               alt="Custom"
               class="mb-8 h-15 w-15"
             />
@@ -181,7 +176,7 @@
           <!-- Fitur 3 -->
           <div class="mb-15 flex flex-col items-center space-y-3 md:mb-0">
             <img
-              src="public/img/benefit/clock.png"
+              src="img/benefit/clock.png"
               alt="Cepat"
               class="mb-8 h-15 w-15"
             />
@@ -191,7 +186,7 @@
           <!-- Fitur 4 -->
           <div class="mb-15 flex flex-col items-center space-y-3 md:mb-0">
             <img
-              src="public/img/benefit/heart.png"
+              src="img/benefit/heart.png"
               alt="Bersahabat"
               class="mb-8 h-15 w-15"
             />
@@ -216,7 +211,7 @@
         >
           <div class="flex justify-center">
             <img
-              src="public/img/catalog/image0.png"
+              src="img/catalog/image0.png"
               alt="Minimalis Modern"
               class="h-55 w-60"
             />
@@ -238,7 +233,7 @@
         >
           <div class="flex justify-center">
             <img
-              src="public/img/catalog/image0.png"
+              src="img/catalog/image0.png"
               alt="Minimalis Modern"
               class="h-55 w-60"
             />
@@ -260,7 +255,7 @@
         >
           <div class="flex justify-center">
             <img
-              src="public/img/catalog/image0.png"
+              src="img/catalog/image0.png"
               alt="Minimalis Modern"
               class="h-55 w-60"
             />
@@ -282,7 +277,7 @@
         >
           <div class="flex justify-center">
             <img
-              src="public/img/catalog/image0.png"
+              src="img/catalog/image0.png"
               alt="Minimalis Modern"
               class="h-55 w-60"
             />
@@ -316,7 +311,7 @@
           <!-- Step 1 -->
           <div class="flex flex-col items-center">
             <img
-              src="public/img/How to/choice0.png"
+              src="img/How to/choice0.png"
               alt="Pilih Desain"
               class="h15- mb-4 w-15"
             />
@@ -328,7 +323,7 @@
           <!-- Step 2 -->
           <div class="flex flex-col items-center">
             <img
-              src="public/img/How to/phone0.png"
+              src="img/How to/phone0.png"
               alt="Hubungi Kami"
               class="h15- mb-4 w-15"
             />
@@ -340,7 +335,7 @@
           <!-- Step 3 -->
           <div class="flex flex-col items-center">
             <img
-              src="public/img/How to/agreement0.png"
+              src="img/How to/agreement0.png"
               alt="Kirim Data"
               class="h15- mb-4 w-15"
             />
@@ -352,7 +347,7 @@
           <!-- Step 4 -->
           <div class="flex flex-col items-center">
             <img
-              src="public/img/How to/document0.png"
+              src="img/How to/document0.png"
               alt="Revisi Jika Perlu"
               class="h15- mb-4 w-15"
             />
@@ -364,7 +359,7 @@
           <!-- Step 5 -->
           <div class="flex flex-col items-center">
             <img
-              src="public/img/How to/send0.png"
+              src="img/How to/send0.png"
               alt="Siap Kirim"
               class="h15- mb-4 w-15"
             />
@@ -396,31 +391,11 @@
                   <div
                     class="mb-8 flex justify-center gap-2 transition-all duration-500"
                   >
-                    <img
-                      class="h-7 w-7"
-                      src="public/img/testimoni/star0.png"
-                      alt=""
-                    />
-                    <img
-                      class="h-7 w-7"
-                      src="public/img/testimoni/star0.png"
-                      alt=""
-                    />
-                    <img
-                      class="h-7 w-7"
-                      src="public/img/testimoni/star0.png"
-                      alt=""
-                    />
-                    <img
-                      class="h-7 w-7"
-                      src="public/img/testimoni/star0.png"
-                      alt=""
-                    />
-                    <img
-                      class="h-7 w-7"
-                      src="public/img/testimoni/star0.png"
-                      alt=""
-                    />
+                    <img class="h-7 w-7" src="img/testimoni/star0.png" alt="" />
+                    <img class="h-7 w-7" src="img/testimoni/star0.png" alt="" />
+                    <img class="h-7 w-7" src="img/testimoni/star0.png" alt="" />
+                    <img class="h-7 w-7" src="img/testimoni/star0.png" alt="" />
+                    <img class="h-7 w-7" src="img/testimoni/star0.png" alt="" />
                   </div>
                   <p
                     class="slide_active:text-gray-800 text-idekatext group-hover:text-idekatext justify-center pb-8 text-center text-base leading-6 transition-all duration-500"
@@ -454,31 +429,11 @@
                   <div
                     class="mb-8 flex justify-center gap-2 transition-all duration-500"
                   >
-                    <img
-                      class="h-7 w-7"
-                      src="public/img/testimoni/star0.png"
-                      alt=""
-                    />
-                    <img
-                      class="h-7 w-7"
-                      src="public/img/testimoni/star0.png"
-                      alt=""
-                    />
-                    <img
-                      class="h-7 w-7"
-                      src="public/img/testimoni/star0.png"
-                      alt=""
-                    />
-                    <img
-                      class="h-7 w-7"
-                      src="public/img/testimoni/star0.png"
-                      alt=""
-                    />
-                    <img
-                      class="h-7 w-7"
-                      src="public/img/testimoni/star0.png"
-                      alt=""
-                    />
+                    <img class="h-7 w-7" src="img/testimoni/star0.png" alt="" />
+                    <img class="h-7 w-7" src="img/testimoni/star0.png" alt="" />
+                    <img class="h-7 w-7" src="img/testimoni/star0.png" alt="" />
+                    <img class="h-7 w-7" src="img/testimoni/star0.png" alt="" />
+                    <img class="h-7 w-7" src="img/testimoni/star0.png" alt="" />
                   </div>
                   <p
                     class="slide_active:text-gray-800 text-idekatext group-hover:text-idekatext justify-center pb-8 text-center text-base leading-6 transition-all duration-500"
@@ -511,31 +466,11 @@
                   <div
                     class="mb-8 flex justify-center gap-2 transition-all duration-500"
                   >
-                    <img
-                      class="h-7 w-7"
-                      src="public/img/testimoni/star0.png"
-                      alt=""
-                    />
-                    <img
-                      class="h-7 w-7"
-                      src="public/img/testimoni/star0.png"
-                      alt=""
-                    />
-                    <img
-                      class="h-7 w-7"
-                      src="public/img/testimoni/star0.png"
-                      alt=""
-                    />
-                    <img
-                      class="h-7 w-7"
-                      src="public/img/testimoni/star0.png"
-                      alt=""
-                    />
-                    <img
-                      class="h-7 w-7"
-                      src="public/img/testimoni/star0.png"
-                      alt=""
-                    />
+                    <img class="h-7 w-7" src="img/testimoni/star0.png" alt="" />
+                    <img class="h-7 w-7" src="img/testimoni/star0.png" alt="" />
+                    <img class="h-7 w-7" src="img/testimoni/star0.png" alt="" />
+                    <img class="h-7 w-7" src="img/testimoni/star0.png" alt="" />
+                    <img class="h-7 w-7" src="img/testimoni/star0.png" alt="" />
                   </div>
                   <p
                     class="slide_active:text-gray-800 text-idekatext group-hover:text-idekatext justify-center pb-8 text-center text-base leading-6 transition-all duration-500"
@@ -569,31 +504,11 @@
                   <div
                     class="mb-8 flex justify-center gap-2 transition-all duration-500"
                   >
-                    <img
-                      class="h-7 w-7"
-                      src="public/img/testimoni/star0.png"
-                      alt=""
-                    />
-                    <img
-                      class="h-7 w-7"
-                      src="public/img/testimoni/star0.png"
-                      alt=""
-                    />
-                    <img
-                      class="h-7 w-7"
-                      src="public/img/testimoni/star0.png"
-                      alt=""
-                    />
-                    <img
-                      class="h-7 w-7"
-                      src="public/img/testimoni/star0.png"
-                      alt=""
-                    />
-                    <img
-                      class="h-7 w-7"
-                      src="public/img/testimoni/star0.png"
-                      alt=""
-                    />
+                    <img class="h-7 w-7" src="img/testimoni/star0.png" alt="" />
+                    <img class="h-7 w-7" src="img/testimoni/star0.png" alt="" />
+                    <img class="h-7 w-7" src="img/testimoni/star0.png" alt="" />
+                    <img class="h-7 w-7" src="img/testimoni/star0.png" alt="" />
+                    <img class="h-7 w-7" src="img/testimoni/star0.png" alt="" />
                   </div>
                   <p
                     class="slide_active:text-gray-800 text-idekatext group-hover:text-idekatext justify-center pb-8 text-center text-base leading-6 transition-all duration-500"
@@ -627,31 +542,11 @@
                   <div
                     class="mb-8 flex justify-center gap-2 transition-all duration-500"
                   >
-                    <img
-                      class="h-7 w-7"
-                      src="public/img/testimoni/star0.png"
-                      alt=""
-                    />
-                    <img
-                      class="h-7 w-7"
-                      src="public/img/testimoni/star0.png"
-                      alt=""
-                    />
-                    <img
-                      class="h-7 w-7"
-                      src="public/img/testimoni/star0.png"
-                      alt=""
-                    />
-                    <img
-                      class="h-7 w-7"
-                      src="public/img/testimoni/star0.png"
-                      alt=""
-                    />
-                    <img
-                      class="h-7 w-7"
-                      src="public/img/testimoni/star0.png"
-                      alt=""
-                    />
+                    <img class="h-7 w-7" src="img/testimoni/star0.png" alt="" />
+                    <img class="h-7 w-7" src="img/testimoni/star0.png" alt="" />
+                    <img class="h-7 w-7" src="img/testimoni/star0.png" alt="" />
+                    <img class="h-7 w-7" src="img/testimoni/star0.png" alt="" />
+                    <img class="h-7 w-7" src="img/testimoni/star0.png" alt="" />
                   </div>
                   <p
                     class="slide_active:text-gray-800 text-idekatext group-hover:text-idekatext justify-center pb-8 text-center text-base leading-6 transition-all duration-500"
@@ -685,31 +580,11 @@
                   <div
                     class="mb-8 flex justify-center gap-2 transition-all duration-500"
                   >
-                    <img
-                      class="h-7 w-7"
-                      src="public/img/testimoni/star0.png"
-                      alt=""
-                    />
-                    <img
-                      class="h-7 w-7"
-                      src="public/img/testimoni/star0.png"
-                      alt=""
-                    />
-                    <img
-                      class="h-7 w-7"
-                      src="public/img/testimoni/star0.png"
-                      alt=""
-                    />
-                    <img
-                      class="h-7 w-7"
-                      src="public/img/testimoni/star0.png"
-                      alt=""
-                    />
-                    <img
-                      class="h-7 w-7"
-                      src="public/img/testimoni/star0.png"
-                      alt=""
-                    />
+                    <img class="h-7 w-7" src="img/testimoni/star0.png" alt="" />
+                    <img class="h-7 w-7" src="img/testimoni/star0.png" alt="" />
+                    <img class="h-7 w-7" src="img/testimoni/star0.png" alt="" />
+                    <img class="h-7 w-7" src="img/testimoni/star0.png" alt="" />
+                    <img class="h-7 w-7" src="img/testimoni/star0.png" alt="" />
                   </div>
                   <p
                     class="slide_active:text-gray-800 text-idekatext group-hover:text-idekatext justify-center pb-8 text-center text-base leading-6 transition-all duration-500"
@@ -743,31 +618,11 @@
                   <div
                     class="mb-8 flex justify-center gap-2 transition-all duration-500"
                   >
-                    <img
-                      class="h-7 w-7"
-                      src="public/img/testimoni/star0.png"
-                      alt=""
-                    />
-                    <img
-                      class="h-7 w-7"
-                      src="public/img/testimoni/star0.png"
-                      alt=""
-                    />
-                    <img
-                      class="h-7 w-7"
-                      src="public/img/testimoni/star0.png"
-                      alt=""
-                    />
-                    <img
-                      class="h-7 w-7"
-                      src="public/img/testimoni/star0.png"
-                      alt=""
-                    />
-                    <img
-                      class="h-7 w-7"
-                      src="public/img/testimoni/star0.png"
-                      alt=""
-                    />
+                    <img class="h-7 w-7" src="img/testimoni/star0.png" alt="" />
+                    <img class="h-7 w-7" src="img/testimoni/star0.png" alt="" />
+                    <img class="h-7 w-7" src="img/testimoni/star0.png" alt="" />
+                    <img class="h-7 w-7" src="img/testimoni/star0.png" alt="" />
+                    <img class="h-7 w-7" src="img/testimoni/star0.png" alt="" />
                   </div>
                   <p
                     class="slide_active:text-gray-800 text-idekatext group-hover:text-idekatext justify-center pb-8 text-center text-base leading-6 transition-all duration-500"
@@ -815,26 +670,26 @@
               <h3 class="mb-4 text-lg text-white">Kontak Kami</h3>
               <ul class="space-y-4 text-sm text-white">
                 <li class="flex items-center gap-2">
-                  <img src="public/img/Kontak kami/placeholder0.png" alt="" />
+                  <img src="img/Kontak kami/placeholder0.png" alt="" />
                   <i class=""></i> Banyubiru, Ambarawa, <br />Kab Semarang
                 </li>
                 <li class="flex items-center gap-2">
-                  <img src="public/img/Kontak kami/email1.png" alt="" />
+                  <img src="img/Kontak kami/email1.png" alt="" />
                   <i class="fas fa-envelope"></i> idekalina@gmail.com
                 </li>
                 <li class="flex items-center gap-2">
                   <img
-                    src="public/img/Kontak kami/phone-receiver-silhouette0.png"
+                    src="img/Kontak kami/phone-receiver-silhouette0.png"
                     alt=""
                   />
                   <i class="fas fa-phone"></i> 081235962004
                 </li>
                 <li class="flex items-center gap-2">
-                  <img src="public/img/Kontak kami/instagram1.png" alt="" />
+                  <img src="img/Kontak kami/instagram1.png" alt="" />
                   <i class="fab fa-instagram"></i> IDEKALINA
                 </li>
                 <li class="flex items-center gap-2">
-                  <img src="public/img/Kontak kami/tik-tok0.png" alt="" />
+                  <img src="img/Kontak kami/tik-tok0.png" alt="" />
                   <i class="fab fa-tiktok"></i> IDEKALINA
                 </li>
               </ul>
@@ -887,11 +742,7 @@
           class="grid grid-cols-2 gap-3 gap-y-8 py-10 max-sm:mx-auto max-sm:max-w-sm sm:grid-cols-4 md:gap-8 lg:grid-cols-6"
         >
           <div class="col-span-full mb-10 lg:col-span-2 lg:mb-0">
-            <img
-              class="mx-auto lg:mx-0"
-              src="public/img/Hero/logo.png"
-              alt=""
-            />
+            <img class="mx-auto lg:mx-0" src="img/Hero/logo.png" alt="" />
             <p class="py-8 text-center text-sm lg:max-w-xs lg:text-left">
               Lebih dari 5 juta pelanggan di 100+ kota telah mempercayai
               undangan kami — digital maupun fisik. Ada yang bisa kami bantu?
