--- a/public/index.html
+++ b/public/index.html
@@ -101,7 +101,7 @@
     </header>
     <!-- navbar end -->
     <!-- Hero -->
-    <section id="home" class="pt-23 pb-16 md:pt-40">
+    <section id="home" class="pt-23 pb-25 md:pt-40 md:pb-16">
       <div
         class="container mx-auto flex flex-col-reverse items-center gap-6 md:gap-12 lg:flex-row"
       >
