Update dari laptop kantor

--- a/public/index.html
+++ b/public/index.html
@@ -101,20 +101,18 @@
     </header>
     <!-- navbar end -->
     <!-- Hero -->
-    <section id="home" class="pt-23 pb-25 md:pt-40 md:pb-16">
+    <section id="home" class="pt-25 pb-28 md:pt-40 md:pb-16">
       <div
         class="container mx-auto flex flex-col-reverse items-center gap-6 md:gap-12 lg:flex-row"
       >
         <!-- Text Content -->
         <div class="text-center lg:w-1/2 lg:text-left">
-          <h1
-            class="text-idekatext font-dmserif mb-4 text-4xl md:mb-6 md:text-6xl"
-          >
+          <h1 class="text-idekatext font-dmserif mb-6 text-4xl md:text-6xl">
             Undangan yang <br />
             Mewakili Cerita <br />
             Cinta Anda
           </h1>
-          <p class="text-idekatext mb-4 text-[14px] md:mb-8 md:text-lg">
+          <p class="text-idekatext mb-8 text-[14px] md:text-lg">
             Desain eksklusif untuk undangan Digital & Cetak,<br />
             dibuat dengan sepenuh hati.
           </p>
@@ -136,7 +134,7 @@
         </div>
 
         <!-- Image -->
-        <div class="w-3/4 md:w-max">
+        <div class="w-10/12 md:w-max">
           <img src="img/Hero/hero.png" alt="Undangan Eksklusif" />
         </div>
       </div>
