Update dari laptop kantor

--- a/public/index.html
+++ b/public/index.html
@@ -158,7 +158,7 @@
             <img
               src="img/benefit/diamond.png"
               alt="Eksklusif"
-              class="mb-8 h-15 w-15"
+              class="mb-8 h-13 w-13 md:h-15 md:w-15"
             />
             <p class="">Desain Eksklusif</p>
           </div>
@@ -168,7 +168,7 @@
             <img
               src="img/benefit/pencil.png"
               alt="Custom"
-              class="mb-8 h-15 w-15"
+              class="mb-8 h-13 w-13 md:h-15 md:w-15"
             />
             <p class="">Bisa Custom</p>
           </div>
@@ -178,7 +178,7 @@
             <img
               src="img/benefit/clock.png"
               alt="Cepat"
-              class="mb-8 h-15 w-15"
+              class="mb-8 h-13 w-13 md:h-15 md:w-15"
             />
             <p class="">Respon Cepat</p>
           </div>
@@ -188,7 +188,7 @@
             <img
               src="img/benefit/heart.png"
               alt="Bersahabat"
-              class="mb-8 h-15 w-15"
+              class="mb-8 h-13 w-13 md:h-15 md:w-15"
             />
             <p class="">Harga Bersahabat</p>
           </div>
@@ -313,7 +313,7 @@
             <img
               src="img/How to/choice0.png"
               alt="Pilih Desain"
-              class="h15- mb-4 w-15"
+              class="mb-4 w-13 md:w-15"
             />
             <p class="text-2xl">Pilih Desain</p>
           </div>
@@ -325,7 +325,7 @@
             <img
               src="img/How to/phone0.png"
               alt="Hubungi Kami"
-              class="h15- mb-4 w-15"
+              class="mb-4 w-13 md:w-15"
             />
             <p class="text-2xl font-medium">Hubungi Kami</p>
           </div>
@@ -337,7 +337,7 @@
             <img
               src="img/How to/agreement0.png"
               alt="Kirim Data"
-              class="h15- mb-4 w-15"
+              class="mb-4 w-13 md:w-15"
             />
             <p class="text-2xl font-medium">Kirim Data</p>
           </div>
@@ -349,7 +349,7 @@
             <img
               src="img/How to/document0.png"
               alt="Revisi Jika Perlu"
-              class="h15- mb-4 w-15"
+              class="mb-4 w-13 md:w-15"
             />
             <p class="text-2xl font-medium">Revisi Jika Perlu</p>
           </div>
@@ -361,7 +361,7 @@
             <img
               src="img/How to/send0.png"
               alt="Siap Kirim"
-              class="h15- mb-4 w-15"
+              class="mb-4 w-13 md:w-15"
             />
             <p class="text-2xl font-medium">Siap Kirim</p>
           </div>
@@ -888,7 +888,7 @@
               undangan kami — digital maupun fisik. Ada yang bisa kami bantu?
             </p>
             <a
-              href=""
+              href="https://wa.me/6281235962004?text=Halo%20Idekalina,%20saya%20ingin%20menanyakan%20soal%20undangan%20digital%20dan%20fisik"
               class="bg-idekabutton hover:bg-idekabuttonhover mx-auto block h-9 w-fit rounded-full px-5 py-2.5 text-xs text-white shadow-sm transition-all duration-500 lg:mx-0"
             >
               Hubungi Kami
@@ -898,13 +898,13 @@
           <div class="text-left lg:mx-auto">
             <h4 class="mb-7 text-lg font-medium">Idekalina</h4>
             <ul class="text-sm transition-all duration-500">
-              <li class="mb-6">
+              <li class="mb-2 md:mb-6">
                 <a href="" class="hover:text-idekabuttonhover">Home</a>
               </li>
-              <li class="mb-6">
+              <li class="mb-2 md:mb-6">
                 <a href="" class="hover:text-idekabuttonhover">Katalog</a>
               </li>
-              <li class="mb-6">
+              <li class="mb-2 md:mb-6">
                 <a href="" class="hover:text-idekabuttonhover">Testimonial</a>
               </li>
               <li>
@@ -918,17 +918,17 @@
           <div class="text-left lg:mx-auto">
             <h4 class="mb-7 text-lg font-medium">Produk</h4>
             <ul class="text-sm transition-all duration-500">
-              <li class="mb-6">
+              <li class="mb-2 md:mb-6">
                 <a href="" class="hover:text-idekabuttonhover"
                   >Undangan Digital</a
                 >
               </li>
-              <li class="mb-6">
+              <li class="mb-2 md:mb-6">
                 <a href="" class="hover:text-idekabuttonhover"
                   >Undangan Digital Custome</a
                 >
               </li>
-              <li class="mb-6">
+              <li class="mb-2 md:mb-6">
                 <a href="" class="hover:text-idekabuttonhover"
                   >Undangan Fisik</a
                 >
@@ -944,17 +944,17 @@
           <div class="text-left lg:mx-auto">
             <h4 class="mb-7 text-lg font-medium">Resources</h4>
             <ul class="text-sm transition-all duration-500">
-              <li class="mb-6">
+              <li class="mb-2 md:mb-6">
                 <a href="" class="hover:text-idekabuttonhover"
                   >FAQs(Pertanyaan Umum)</a
                 >
               </li>
-              <li class="mb-6">
+              <li class="mb-2 md:mb-6">
                 <a href="" class="hover:text-idekabuttonhover"
                   >Pesan Undangan</a
                 >
               </li>
-              <li class="mb-6">
+              <li class="mb-2 md:mb-6">
                 <a href="" class="hover:text-idekabuttonhover">Dokumentasi</a>
               </li>
               <li>
@@ -968,13 +968,13 @@
           <div class="text-left lg:mx-auto">
             <h4 class="mb-7 text-lg font-medium">Blogs</h4>
             <ul class="text-sm transition-all duration-500">
-              <li class="mb-6">
+              <li class="mb-2 md:mb-6">
                 <a href="" class="hover:text-idekabuttonhover">Berita</a>
               </li>
-              <li class="mb-6">
+              <li class="mb-2 md:mb-6">
                 <a href="" class="hover:text-idekabuttonhover">Tips & Tricks</a>
               </li>
-              <li class="mb-6">
+              <li class="mb-2 md:mb-6">
                 <a href="" class="hover:text-idekabuttonhover">Update Baru</a>
               </li>
               <li>
