--- a/public/index.html
+++ b/public/index.html
@@ -25,9 +25,9 @@
   <body class="bg-idekalina font-poppins text-idekatext">
     <!-- navbar -->
     <header
-      class="absolute top-0 z-50 flex w-full items-center px-10 pt-4 lg:pt-0"
+      class="absolute top-0 z-50 mx-auto flex w-full items-center px-10 pt-4 md:px-30 lg:px-4 lg:pt-0 xl:px-10"
     >
-      <div class="container">
+      <div class="container lg:mx-auto xl:mx-0">
         <div class="relative flex items-center justify-between">
           <div class="">
             <img src="img/Hero/logo.png" alt="" />
@@ -54,7 +54,7 @@
               id="nav-menu"
               class="bg-idekasecond absolute top-full right-4 hidden w-full max-w-3/4 rounded-lg py-5 shadow-lg lg:static lg:block lg:max-w-full lg:rounded-none lg:bg-transparent lg:shadow-none"
             >
-              <ul class="block lg:flex lg:space-x-8">
+              <ul class="block lg:flex lg:space-x-6 xl:space-x-8">
                 <li class="group">
                   <a
                     class="group-hover:text-idekabuttonhover mx-8 flex py-6 text-base lg:mx-0 lg:text-lg"
@@ -103,16 +103,20 @@
     <!-- Hero -->
     <section id="home" class="pt-25 pb-28 md:pt-40 md:pb-16">
       <div
-        class="container mx-auto flex flex-col-reverse items-center gap-6 md:gap-12 lg:flex-row"
+        class="container mx-auto flex flex-col-reverse items-center gap-6 md:gap-12 lg:flex-row lg:px-4"
       >
         <!-- Text Content -->
         <div class="text-center lg:w-1/2 lg:text-left">
-          <h1 class="text-idekatext font-dmserif mb-6 text-4xl md:text-6xl">
+          <h1
+            class="text-idekatext font-dmserif mb-6 text-5xl sm:text-6xl md:text-6xl lg:text-[55px] xl:text-6xl"
+          >
             Undangan yang <br />
             Mewakili Cerita <br />
             Cinta Anda
           </h1>
-          <p class="text-idekatext mb-8 text-[14px] md:text-lg">
+          <p
+            class="text-idekatext mb-8 text-[14px] sm:text-[16px] md:text-lg lg:text-[16px] xl:text-lg"
+          >
             Desain eksklusif untuk undangan Digital & Cetak,<br />
             dibuat dengan sepenuh hati.
           </p>
@@ -143,7 +147,7 @@
 
     <!-- benefit -->
     <section class="bg-idekasecond py-12">
-      <div class="container mx-auto text-center">
+      <div class="container mx-auto text-center lg:px-4">
         <!-- Judul -->
         <h2 class="font-dmserif mb-20 text-3xl md:text-6xl">
           Kenapa Harus Idekalina ?
@@ -203,11 +207,11 @@
         Produk Unggulan
       </h2>
       <div
-        class="grid items-center gap-10 md:grid-cols-2 md:gap-27 lg:grid-cols-4"
+        class="grid items-center gap-10 px-4 md:grid-cols-2 md:gap-27 lg:grid-cols-4 lg:gap-12 xl:gap-24"
       >
         <!-- Kartu Produk 1 -->
         <div
-          class="mx-auto h-98 w-60 overflow-hidden rounded-2xl bg-white text-center shadow-md md:mx-0"
+          class="mx-auto h-98 w-60 overflow-hidden rounded-2xl bg-white text-center shadow-md md:mx-0 lg:h-98 lg:w-53 xl:h-98 xl:w-60"
         >
           <div class="flex justify-center">
             <img
@@ -229,7 +233,7 @@
         </div>
         <!-- produk 2 -->
         <div
-          class="mx-auto h-98 w-60 overflow-hidden rounded-2xl bg-white text-center shadow-md md:mx-0"
+          class="mx-auto h-98 w-60 overflow-hidden rounded-2xl bg-white text-center shadow-md md:mx-0 lg:h-98 lg:w-53 xl:h-98 xl:w-60"
         >
           <div class="flex justify-center">
             <img
@@ -251,7 +255,7 @@
         </div>
         <!-- produk 3 -->
         <div
-          class="mx-auto h-98 w-60 overflow-hidden rounded-2xl bg-white text-center shadow-md"
+          class="mx-auto h-98 w-60 overflow-hidden rounded-2xl bg-white text-center shadow-md md:mx-0 lg:h-98 lg:w-53 xl:h-98 xl:w-60"
         >
           <div class="flex justify-center">
             <img
@@ -273,7 +277,7 @@
         </div>
         <!-- produk 4 -->
         <div
-          class="mx-auto h-98 w-60 overflow-hidden rounded-2xl bg-white text-center shadow-md"
+          class="mx-auto h-98 w-60 overflow-hidden rounded-2xl bg-white text-center shadow-md md:mx-0 lg:h-98 lg:w-53 xl:h-98 xl:w-60"
         >
           <div class="flex justify-center">
             <img
@@ -300,34 +304,34 @@
 
     <!-- cara pemesanan -->
     <section id="carapemesanan" class="scroll-mt-10 py-16 md:scroll-mt-30">
-      <div class="container mx-auto text-center">
+      <div class="text-center md:mx-10 lg:container lg:mx-auto">
         <h2 class="font-dmserif mb-16 text-center text-4xl md:text-6xl">
           Cara Pemesanan
         </h2>
 
         <div
-          class="mx-auto flex flex-col items-center justify-between gap-20 md:flex-row md:gap-10"
+          class="mx-auto flex flex-col items-center justify-between gap-20 md:flex-row md:gap-5 lg:gap-10"
         >
           <!-- Step 1 -->
           <div class="flex flex-col items-center">
             <img
               src="img/How to/choice0.png"
               alt="Pilih Desain"
-              class="mb-4 w-13 md:w-15"
+              class="mb-4 w-14 md:w-13 lg:w-15"
             />
-            <p class="text-2xl">Pilih Desain</p>
+            <p class="text-xl lg:text-2xl">Pilih Desain</p>
           </div>
 
-          <span class="hidden text-5xl md:inline">→</span>
+          <span class="hidden md:inline md:text-4xl lg:text-5xl">→</span>
 
           <!-- Step 2 -->
           <div class="flex flex-col items-center">
             <img
               src="img/How to/phone0.png"
               alt="Hubungi Kami"
-              class="mb-4 w-13 md:w-15"
+              class="mb-4 w-14 md:w-13 lg:w-15"
             />
-            <p class="text-2xl font-medium">Hubungi Kami</p>
+            <p class="text-xl font-medium lg:text-2xl">Hubungi Kami</p>
           </div>
 
           <span class="hidden text-5xl md:inline">→</span>
@@ -337,9 +341,9 @@
             <img
               src="img/How to/agreement0.png"
               alt="Kirim Data"
-              class="mb-4 w-13 md:w-15"
+              class="mb-4 w-14 md:w-13 lg:w-15"
             />
-            <p class="text-2xl font-medium">Kirim Data</p>
+            <p class="text-xl font-medium lg:text-2xl">Kirim Data</p>
           </div>
 
           <span class="hidden text-5xl md:inline">→</span>
@@ -349,9 +353,9 @@
             <img
               src="img/How to/document0.png"
               alt="Revisi Jika Perlu"
-              class="mb-4 w-13 md:w-15"
+              class="mb-4 w-14 md:w-13 lg:w-15"
             />
-            <p class="text-2xl font-medium">Revisi Jika Perlu</p>
+            <p class="text-xl font-medium lg:text-2xl">Revisi Jika Perlu</p>
           </div>
 
           <span class="hidden text-5xl md:inline">→</span>
@@ -361,9 +365,9 @@
             <img
               src="img/How to/send0.png"
               alt="Siap Kirim"
-              class="mb-4 w-13 md:w-15"
+              class="mb-4 w-14 md:w-13 lg:w-15"
             />
-            <p class="text-2xl font-medium">Siap Kirim</p>
+            <p class="text-xl font-medium lg:text-2xl">Siap Kirim</p>
           </div>
         </div>
       </div>
@@ -801,11 +805,11 @@
           Kontak Idekalina
         </h2>
         <div
-          class="flex flex-col items-start lg:relative lg:flex-row lg:pr-48 lg:pl-4"
+          class="flex flex-col items-start lg:relative lg:flex-row lg:pr-20 lg:pl-0 xl:pr-48 xl:pl-4"
         >
           <div class="mx-auto w-full lg:w-0">
             <div
-              class="bg-idekabutton px-8 py-9 shadow-xl/20 lg:absolute lg:top-10 lg:left-50 lg:px-7"
+              class="bg-idekabutton px-8 py-9 shadow-xl/20 lg:absolute lg:top-10 lg:left-25 lg:px-7 xl:left-50"
             >
               <h3 class="mb-4 text-lg text-white">Kontak Kami</h3>
               <ul class="space-y-4 text-sm text-white">
@@ -839,10 +843,14 @@
 
           <!-- Form Input -->
           <div
-            class="bg-idekasecond mt-5 p-10 shadow-xl/20 lg:ml-70 lg:py-5 lg:pr-10 lg:pl-60"
+            class="bg-idekasecond mt-5 p-10 shadow-xl/20 lg:ml-40 lg:py-5 lg:pr-10 lg:pl-60 xl:ml-70"
           >
-            <h3 class="text-4xl font-medium">Mari Terhubung</h3>
-            <p class="mb-4 text-sm">Silakan tinggalkan pesan Anda di sini.</p>
+            <h3 class="text-4xl font-medium lg:text-3xl xl:text-4xl">
+              Mari Terhubung
+            </h3>
+            <p class="mb-4 text-sm lg:text-xs xl:text-sm">
+              Silakan tinggalkan pesan Anda di sini.
+            </p>
             <form class="space-y-4">
               <input
                 type="text"
@@ -895,7 +903,7 @@
             </a>
           </div>
           <!--End Col-->
-          <div class="text-left lg:mx-auto">
+          <div class="text-center lg:mx-auto xl:text-left">
             <h4 class="mb-7 text-lg font-medium">Idekalina</h4>
             <ul class="text-sm transition-all duration-500">
               <li class="mb-2 md:mb-6">
@@ -915,7 +923,7 @@
             </ul>
           </div>
           <!--End Col-->
-          <div class="text-left lg:mx-auto">
+          <div class="text-center lg:mx-auto xl:text-left">
             <h4 class="mb-7 text-lg font-medium">Produk</h4>
             <ul class="text-sm transition-all duration-500">
               <li class="mb-2 md:mb-6">
@@ -941,7 +949,7 @@
             </ul>
           </div>
           <!--End Col-->
-          <div class="text-left lg:mx-auto">
+          <div class="text-center lg:mx-auto xl:text-left">
             <h4 class="mb-7 text-lg font-medium">Resources</h4>
             <ul class="text-sm transition-all duration-500">
               <li class="mb-2 md:mb-6">
@@ -965,7 +973,7 @@
             </ul>
           </div>
           <!--End Col-->
-          <div class="text-left lg:mx-auto">
+          <div class="text-center lg:mx-auto xl:text-left">
             <h4 class="mb-7 text-lg font-medium">Blogs</h4>
             <ul class="text-sm transition-all duration-500">
               <li class="mb-2 md:mb-6">
@@ -989,7 +997,7 @@
             class="flex flex-col items-center justify-center lg:flex-row lg:justify-between"
           >
             <span class="text-sm"
-              >©<a href="">Idekalina</a> 2024, All rights reserved.</span
+              >©<a href="">Idekalina</a> 2025, All rights reserved.</span
             >
             <div class="mt-4 flex space-x-4 sm:justify-center lg:mt-0">
               <a
