--- a/public/index.html
+++ b/public/index.html
@@ -810,7 +810,7 @@
         >
           <div class="mx-auto w-full lg:w-0">
             <div
-              class="bg-idekabutton px-8 py-9 shadow-xl/20 lg:absolute lg:top-10 lg:left-25 lg:px-7 xl:left-50"
+              class="bg-idekabutton px-8 py-9 shadow-xl/20 lg:absolute lg:top-10 lg:left-25 lg:px-7 lg:py-14 xl:left-50 xl:py-15"
             >
               <h3 class="mb-4 text-lg text-white">Kontak Kami</h3>
               <ul class="space-y-4 text-sm text-white">
@@ -846,7 +846,9 @@
           <div
             class="bg-idekasecond mt-5 p-10 shadow-xl/20 lg:ml-40 lg:py-5 lg:pr-10 lg:pl-60 xl:ml-70"
           >
-            <h3 class="text-4xl font-medium lg:text-3xl xl:text-4xl">
+            <h3
+              class="text-3xl font-medium sm:text-4xl lg:text-3xl xl:text-4xl"
+            >
               Mari Terhubung
             </h3>
             <p class="mb-4 text-sm lg:text-xs xl:text-sm">
@@ -904,16 +906,16 @@
             </a>
           </div>
           <!--End Col-->
-          <div class="text-center lg:mx-auto xl:text-left">
+          <div class="ml-5 text-left sm:ml-10 md:ml-13 lg:mx-auto">
             <h4 class="mb-7 text-lg font-medium">Idekalina</h4>
             <ul class="text-sm transition-all duration-500">
-              <li class="mb-2 md:mb-6">
+              <li class="mb-2 md:mb-4">
                 <a href="" class="hover:text-idekabuttonhover">Home</a>
               </li>
-              <li class="mb-2 md:mb-6">
+              <li class="mb-2 md:mb-4">
                 <a href="" class="hover:text-idekabuttonhover">Katalog</a>
               </li>
-              <li class="mb-2 md:mb-6">
+              <li class="mb-2 md:mb-4">
                 <a href="" class="hover:text-idekabuttonhover">Testimonial</a>
               </li>
               <li>
@@ -924,46 +926,42 @@
             </ul>
           </div>
           <!--End Col-->
-          <div class="text-center lg:mx-auto xl:text-left">
+          <div class="ml-5 text-left sm:ml-10 md:ml-13 lg:mx-auto">
             <h4 class="mb-7 text-lg font-medium">Produk</h4>
             <ul class="text-sm transition-all duration-500">
-              <li class="mb-2 md:mb-6">
+              <li class="mb-2 md:mb-4">
                 <a href="" class="hover:text-idekabuttonhover"
                   >Undangan Digital</a
                 >
               </li>
-              <li class="mb-2 md:mb-6">
+              <li class="mb-2 md:mb-4">
                 <a href="" class="hover:text-idekabuttonhover"
-                  >Undangan Digital Custome</a
+                  >Digital Custome</a
                 >
               </li>
-              <li class="mb-2 md:mb-6">
+              <li class="mb-2 md:mb-4">
                 <a href="" class="hover:text-idekabuttonhover"
                   >Undangan Fisik</a
                 >
               </li>
               <li>
-                <a href="" class="hover:text-idekabuttonhover"
-                  >Undangan Fisik Custome</a
-                >
+                <a href="" class="hover:text-idekabuttonhover">Fisik Custome</a>
               </li>
             </ul>
           </div>
           <!--End Col-->
-          <div class="text-center lg:mx-auto xl:text-left">
+          <div class="ml-5 text-left sm:ml-10 md:ml-13 lg:mx-auto">
             <h4 class="mb-7 text-lg font-medium">Resources</h4>
             <ul class="text-sm transition-all duration-500">
-              <li class="mb-2 md:mb-6">
-                <a href="" class="hover:text-idekabuttonhover"
-                  >FAQs(Pertanyaan Umum)</a
-                >
+              <li class="mb-2 md:mb-4">
+                <a href="" class="hover:text-idekabuttonhover">FAQs</a>
               </li>
-              <li class="mb-2 md:mb-6">
+              <li class="mb-2 md:mb-4">
                 <a href="" class="hover:text-idekabuttonhover"
                   >Pesan Undangan</a
                 >
               </li>
-              <li class="mb-2 md:mb-6">
+              <li class="mb-2 md:mb-4">
                 <a href="" class="hover:text-idekabuttonhover">Dokumentasi</a>
               </li>
               <li>
@@ -974,16 +972,16 @@
             </ul>
           </div>
           <!--End Col-->
-          <div class="text-center lg:mx-auto xl:text-left">
+          <div class="ml-5 text-left sm:ml-10 md:ml-13 lg:mx-auto">
             <h4 class="mb-7 text-lg font-medium">Blogs</h4>
             <ul class="text-sm transition-all duration-500">
-              <li class="mb-2 md:mb-6">
+              <li class="mb-2 md:mb-4">
                 <a href="" class="hover:text-idekabuttonhover">Berita</a>
               </li>
-              <li class="mb-2 md:mb-6">
+              <li class="mb-2 md:mb-4">
                 <a href="" class="hover:text-idekabuttonhover">Tips & Tricks</a>
               </li>
-              <li class="mb-2 md:mb-6">
+              <li class="mb-2 md:mb-4">
                 <a href="" class="hover:text-idekabuttonhover">Update Baru</a>
               </li>
               <li>
