--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,9 @@
       <div class="container lg:mx-auto xl:mx-0">
         <div class="relative flex items-center justify-between">
           <div class="">
-            <img src="img/Hero/logo.png" alt="" />
+            <a href="index.html">
+              <img src="img/Hero/logo.png" alt="" />
+            </a>
           </div>
           <div class="flex items-center">
             <button
@@ -59,15 +61,15 @@
                 <li class="group">
                   <a
                     class="group-hover:text-idekabuttonhover mx-8 flex py-6 text-base lg:mx-0 lg:text-lg"
-                    href="#"
+                    href="index.html"
                     >Home</a
                   >
                 </li>
                 <li class="group">
                   <a
                     class="group-hover:text-idekabuttonhover mx-8 flex py-6 text-base lg:mx-0 lg:text-lg"
-                    href="#Home"
-                    >Katalog</a
+                    href="produk.html"
+                    >Produk</a
                   >
                 </li>
                 <li class="group">
