--- a/public/produk.html
+++ b/public/produk.html
@@ -105,7 +105,7 @@
     <!-- navbar end -->
     <!-- start produk list -->
 
-    <section class="mt-10 py-24">
+    <section class="mt-3 py-24 md:mt-10">
       <div class="mb-10 text-4xl md:text-6xl">
         <h2 class="font-dmserif mb-10 text-center">Produk Category</h2>
         <div class="grid grid-cols-1 gap-8 sm:grid-cols-2 lg:grid-cols-4">
@@ -117,7 +117,7 @@
               <img
                 src="https://pagedone.io/asset/uploads/1700726158.png"
                 alt="face cream image"
-                class="aspect-square w-full rounded-2xl object-cover"
+                class="aspect-square w-full transform rounded-2xl object-cover transition duration-300 ease-in-out hover:scale-105"
               />
             </div>
             <div class="mt-5">
@@ -129,7 +129,7 @@
                 </h6>
               </div>
               <p class="mt-2 text-sm leading-6 font-normal text-gray-500">
-                template original dariidekalina
+                template original dari dekalina
               </p>
             </div>
           </a>
@@ -142,7 +142,7 @@
               <img
                 src="https://pagedone.io/asset/uploads/1700726158.png"
                 alt="face cream image"
-                class="aspect-square w-full rounded-2xl object-cover"
+                class="aspect-square w-full rounded-2xl object-cover transition duration-300 ease-in-out hover:scale-105"
               />
             </div>
             <div class="mt-5">
@@ -167,7 +167,7 @@
               <img
                 src="https://pagedone.io/asset/uploads/1700726158.png"
                 alt="face cream image"
-                class="aspect-square w-full rounded-2xl object-cover"
+                class="aspect-square w-full rounded-2xl object-cover transition duration-300 ease-in-out hover:scale-105"
               />
             </div>
             <div class="mt-5">
@@ -192,7 +192,7 @@
               <img
                 src="https://pagedone.io/asset/uploads/1700726158.png"
                 alt="face cream image"
-                class="aspect-square w-full rounded-2xl object-cover"
+                class="aspect-square w-full rounded-2xl object-cover transition duration-300 ease-in-out hover:scale-105"
               />
             </div>
             <div class="mt-5">
@@ -223,7 +223,10 @@
           class="grid grid-cols-2 gap-3 gap-y-8 py-10 max-sm:mx-auto max-sm:max-w-sm sm:grid-cols-4 md:gap-8 lg:grid-cols-6"
         >
           <div class="col-span-full mb-10 lg:col-span-2 lg:mb-0">
-            <img class="mx-auto lg:mx-0" src="img/Hero/logo.png" alt="" />
+            <a href="index.html">
+              <img class="mx-auto lg:mx-0" src="img/Hero/logo.png" alt="" />
+            </a>
+
             <p class="py-8 text-center text-sm lg:max-w-xs lg:text-left">
               Lebih dari 5 juta pelanggan di 100+ kota telah mempercayai
               undangan kami — digital maupun fisik. Ada yang bisa kami bantu?
@@ -240,16 +243,26 @@
             <h4 class="mb-7 text-lg font-medium">Idekalina</h4>
             <ul class="text-sm transition-all duration-500">
               <li class="mb-2 md:mb-4">
-                <a href="" class="hover:text-idekabuttonhover">Home</a>
+                <a href="/idekalina/" class="hover:text-idekabuttonhover"
+                  >Home</a
+                >
               </li>
               <li class="mb-2 md:mb-4">
-                <a href="" class="hover:text-idekabuttonhover">Katalog</a>
+                <a href="produk.html" class="hover:text-idekabuttonhover"
+                  >Produk</a
+                >
               </li>
               <li class="mb-2 md:mb-4">
-                <a href="" class="hover:text-idekabuttonhover">Testimonial</a>
+                <a
+                  href="/idekalina/#testimonial"
+                  class="hover:text-idekabuttonhover"
+                  >Testimonial</a
+                >
               </li>
               <li>
-                <a href="" class="hover:text-idekabuttonhover"
+                <a
+                  href="/idekalina/#carapemesanan"
+                  class="hover:text-idekabuttonhover"
                   >Cara Pemesanan</a
                 >
               </li>
@@ -330,7 +343,9 @@
             >
             <div class="mt-4 flex space-x-4 sm:justify-center lg:mt-0">
               <a
-                href="javascript:;"
+                href="https://www.instagram.com/idekalina/"
+                target="_blank"
+                rel="noopener noreferrer"
                 class="hover:bg-idekabuttonhover bg-idekabutton flex h-9 w-9 items-center justify-center rounded-full"
               >
                 <svg
