--- a/public/index.html
+++ b/public/index.html
@@ -127,7 +127,7 @@
             class="flex justify-center gap-2 text-lg sm:flex-row md:gap-6 lg:justify-start"
           >
             <a
-              href="#"
+              href="produk.html"
               class="bg-idekabutton hover:bg-idekabuttonhover rounded-full px-6 py-3 text-white"
               >Lihat Katalog</a
             >
@@ -895,7 +895,10 @@
           class="grid grid-cols-2 gap-3 gap-y-8 py-10 max-sm:mx-auto max-sm:max-w-sm sm:grid-cols-4 md:gap-8 lg:grid-cols-6"
         >
           <div class="col-span-full mb-10 lg:col-span-2 lg:mb-0">
-            <img class="mx-auto lg:mx-0" src="img/Hero/logo.png" alt="" />
+            <a href="index.html">
+              <img class="mx-auto lg:mx-0" src="img/Hero/logo.png" alt="" />
+            </a>
+
             <p class="py-8 text-center text-sm lg:max-w-xs lg:text-left">
               Lebih dari 5 juta pelanggan di 100+ kota telah mempercayai
               undangan kami — digital maupun fisik. Ada yang bisa kami bantu?
@@ -912,16 +915,22 @@
             <h4 class="mb-7 text-lg font-medium">Idekalina</h4>
             <ul class="text-sm transition-all duration-500">
               <li class="mb-2 md:mb-4">
-                <a href="" class="hover:text-idekabuttonhover">Home</a>
+                <a href="index.html" class="hover:text-idekabuttonhover"
+                  >Home</a
+                >
               </li>
               <li class="mb-2 md:mb-4">
-                <a href="" class="hover:text-idekabuttonhover">Katalog</a>
+                <a href="produk.html" class="hover:text-idekabuttonhover"
+                  >Produk</a
+                >
               </li>
               <li class="mb-2 md:mb-4">
-                <a href="" class="hover:text-idekabuttonhover">Testimonial</a>
+                <a href="#testimonial" class="hover:text-idekabuttonhover"
+                  >Testimonial</a
+                >
               </li>
               <li>
-                <a href="" class="hover:text-idekabuttonhover"
+                <a href="#carapemesanan" class="hover:text-idekabuttonhover"
                   >Cara Pemesanan</a
                 >
               </li>
@@ -1002,7 +1011,9 @@
             >
             <div class="mt-4 flex space-x-4 sm:justify-center lg:mt-0">
               <a
-                href="javascript:;"
+                href="https://www.instagram.com/idekalina/"
+                target="_blank"
+                rel="noopener noreferrer"
                 class="hover:bg-idekabuttonhover bg-idekabutton flex h-9 w-9 items-center justify-center rounded-full"
               >
                 <svg
