--- a/public/index.html
+++ b/public/index.html
@@ -905,6 +905,8 @@
             </p>
             <a
               href="https://wa.me/6281235962004?text=Halo%20Idekalina,%20saya%20ingin%20menanyakan%20soal%20undangan%20digital%20dan%20fisik"
+              target="_blank"
+              rel="noopener noreferrer"
               class="bg-idekabutton hover:bg-idekabuttonhover mx-auto block h-9 w-fit rounded-full px-5 py-2.5 text-xs text-white shadow-sm transition-all duration-500 lg:mx-0"
             >
               Hubungi Kami
