--- a/public/index.html
+++ b/public/index.html
@@ -927,12 +927,16 @@
                 >
               </li>
               <li class="mb-2 md:mb-4">
-                <a href="#testimonial" class="hover:text-idekabuttonhover"
+                <a
+                  href="/idekalina/#testimonial"
+                  class="hover:text-idekabuttonhover"
                   >Testimonial</a
                 >
               </li>
               <li>
-                <a href="#carapemesanan" class="hover:text-idekabuttonhover"
+                <a
+                  href="/idekalina/#carapemesanan"
+                  class="hover:text-idekabuttonhover"
                   >Cara Pemesanan</a
                 >
               </li>
