--- a/public/undangandigital.html
+++ b/public/undangandigital.html
@@ -103,114 +103,55 @@
       </div>
     </header>
     <!-- navbar end -->
-    <!-- start produk list -->
-    <section class="mt-3 py-24 md:mt-10">
-      <div
-        class="mx-auto mb-10 max-w-7xl px-2 text-4xl sm:px-21 sm:text-5xl md:max-w-2xl md:px-10 md:text-6xl lg:max-w-7xl"
+
+    <!-- produk undangan digital -->
+    <section class="mx-auto mt-6 max-w-6xl px-4 py-24">
+      <h2
+        class="font-dmserif mb-10 text-center text-4xl sm:text-5xl md:text-6xl"
       >
-        <h2 class="font-dmserif mb-10 text-center">Produk Category</h2>
-        <div class="grid grid-cols-1 gap-8 sm:grid-cols-2 lg:grid-cols-4">
-          <a
-            href="undangandigital.html"
-            class="group mx-auto cursor-pointer transition-all duration-500 sm:mr-0 lg:mx-auto"
+        Undangan Digital
+      </h2>
+
+      <div
+        class="grid grid-cols-1 gap-8 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4"
+      >
+        <!-- Produk Card -->
+        <div
+          class="relative overflow-hidden rounded-xl shadow transition duration-300 hover:scale-105"
+        >
+          <img
+            src="https://pagedone.io/asset/uploads/1700726158.png"
+            alt="Produk 1"
+            class="h-64 w-full object-cover"
+          />
+          <div
+            class="absolute top-3 left-3 rounded-full bg-green-800 px-3 py-1 text-sm text-white"
           >
-            <div class="">
-              <img
-                src="https://pagedone.io/asset/uploads/1700726158.png"
-                alt="face cream image"
-                class="aspect-square w-full transform rounded-2xl object-cover transition duration-300 ease-in-out hover:scale-105"
-              />
-            </div>
-            <div class="mt-5">
-              <div class="flex items-center justify-between">
-                <h6
-                  class="group-hover:text-idekabuttonhover text-xl leading-8 font-semibold transition-all duration-500"
-                >
-                  Undangan Digital
-                </h6>
+            50% off
+          </div>
+          <div class="p-4">
+            <div class="flex items-center justify-between">
+              <p class="text-sm text-gray-500">Undangan Digital</p>
+              <div class="flex items-center text-xl text-yellow-500">
+                <span>★</span>
+                <span class="text-idekatext ml-1 text-lg">4.9</span>
               </div>
-              <p class="mt-2 text-sm leading-6 font-normal text-gray-500">
-                template original dari dekalina
-              </p>
             </div>
-          </a>
-          <!-- next category -->
-          <a
-            href=""
-            class="group mx-auto cursor-pointer transition-all duration-500 sm:mr-0 lg:mx-auto"
-          >
-            <div class="">
-              <img
-                src="https://pagedone.io/asset/uploads/1700726158.png"
-                alt="face cream image"
-                class="aspect-square w-full rounded-2xl object-cover transition duration-300 ease-in-out hover:scale-105"
-              />
+
+            <h3 class="text-lg font-semibold">Idekalina Elegan I</h3>
+
+            <div class="mt-2">
+              <span class="text-idekabutton mr-2 text-lg font-bold"
+                >Rp 200.000</span
+              >
+              <span class="text-gray-500 line-through">Rp 400.000</span>
             </div>
-            <div class="mt-5">
-              <div class="flex items-center justify-between">
-                <h6
-                  class="group-hover:text-idekabuttonhover text-xl leading-8 font-semibold transition-all duration-500"
-                >
-                  Digital Custom
-                </h6>
-              </div>
-              <p class="mt-2 text-sm leading-6 font-normal text-gray-500">
-                wujudkan desain impianmu sendiri
-              </p>
-            </div>
-          </a>
-          <!-- next category -->
-          <a
-            href=""
-            class="group mx-auto cursor-pointer transition-all duration-500 sm:mr-0 lg:mx-auto"
-          >
-            <div class="">
-              <img
-                src="https://pagedone.io/asset/uploads/1700726158.png"
-                alt="face cream image"
-                class="aspect-square w-full rounded-2xl object-cover transition duration-300 ease-in-out hover:scale-105"
-              />
-            </div>
-            <div class="mt-5">
-              <div class="flex items-center justify-between">
-                <h6
-                  class="group-hover:text-idekabuttonhover text-xl leading-8 font-semibold transition-all duration-500"
-                >
-                  Undangan Fisik
-                </h6>
-              </div>
-              <p class="mt-2 text-sm leading-6 font-normal text-gray-500">
-                Lorem ipsum dolor sit amet.
-              </p>
-            </div>
-          </a>
-          <!-- next category -->
-          <a
-            href=""
-            class="group mx-auto cursor-pointer transition-all duration-500 sm:mr-0 lg:mx-auto"
-          >
-            <div class="">
-              <img
-                src="https://pagedone.io/asset/uploads/1700726158.png"
-                alt="face cream image"
-                class="aspect-square w-full rounded-2xl object-cover transition duration-300 ease-in-out hover:scale-105"
-              />
-            </div>
-            <div class="mt-5">
-              <div class="flex items-center justify-between">
-                <h6
-                  class="group-hover:text-idekabuttonhover text-xl leading-8 font-semibold transition-all duration-500"
-                >
-                  Fisik Custom
-                </h6>
-              </div>
-              <p class="mt-2 text-sm leading-6 font-normal text-gray-500">
-                Lorem ipsum dolor sit amet.
-              </p>
-            </div>
-          </a>
-          <!-- end -->
+          </div>
         </div>
+
+        <!-- Duplikat produk card lainnya -->
+
+        <!-- Tambahkan lebih banyak card jika diperlukan -->
       </div>
     </section>
     <!-- end -->
